[gd_scene load_steps=20 format=3 uid="uid://tpr3mtt5ced0"]

[ext_resource type="Script" uid="uid://biqa54gxvfate" path="res://node_2d.gd" id="1_xs85p"]
[ext_resource type="FontFile" uid="uid://cmewveog2qbd" path="res://Daydream.ttf" id="2_rb3lx"]
[ext_resource type="Texture2D" uid="uid://ceqhg6l2givtp" path="res://spliced_1128x658.png" id="2_v5nnq"]
[ext_resource type="Texture2D" uid="uid://dvt1rlhoa3jlp" path="res://boba.png" id="4_v5nnq"]
[ext_resource type="Texture2D" uid="uid://dyf6fmkru0uk4" path="res://littleboys_2.png" id="5_f7xku"]
[ext_resource type="FontFile" uid="uid://lm6k63tc872b" path="res://Nohemi-Medium.ttf" id="6_f7xku"]
[ext_resource type="Texture2D" uid="uid://ddtujouojuvye" path="res://big_man_2.png" id="7_dqflq"]
[ext_resource type="Texture2D" uid="uid://cpkv5omfeuexi" path="res://output-onlinepngtools_1.png" id="8_dqflq"]

[sub_resource type="Theme" id="Theme_v5nnq"]
RichTextLabel/font_sizes/normal_font_size = 30
RichTextLabel/fonts/bold_font = null
RichTextLabel/fonts/bold_italics_font = null
RichTextLabel/fonts/italics_font = null
RichTextLabel/fonts/mono_font = null
RichTextLabel/fonts/normal_font = ExtResource("2_rb3lx")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xs85p"]
bg_color = Color(0.872547, 0.10439, 0.140138, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rb3lx"]
bg_color = Color(0.508317, 0.154222, 0.172625, 1)

[sub_resource type="Theme" id="Theme_emewn"]
Button/styles/normal = SubResource("StyleBoxFlat_xs85p")
Button/styles/pressed = SubResource("StyleBoxFlat_rb3lx")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dqflq"]
bg_color = Color(0.6, 0.6, 0.6, 0.486275)
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c3alu"]
bg_color = Color(0.2, 0.0784314, 0, 0.568627)
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7i56v"]

[sub_resource type="Theme" id="Theme_7qejb"]
Label/colors/font_color = Color(1, 1, 1, 1)
Label/colors/font_outline_color = Color(0, 0, 0, 1)
Label/colors/font_shadow_color = Color(0, 0, 0, 0)
Label/constants/line_spacing = 3
Label/constants/outline_size = 0
Label/constants/shadow_offset_x = 1
Label/constants/shadow_offset_y = 1
Label/constants/shadow_outline_size = 1
Label/font_sizes/font_size = 28
Label/fonts/font = ExtResource("2_rb3lx")
Label/styles/normal = SubResource("StyleBoxEmpty_7i56v")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ah07c"]
bg_color = Color(0.2, 0.08, 0, 0.568627)
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[sub_resource type="Theme" id="Theme_xro1c"]
Label/colors/font_color = Color(1, 1, 1, 1)
Label/colors/font_outline_color = Color(0, 0, 0, 1)
Label/colors/font_shadow_color = Color(0, 0, 0, 0)
Label/font_sizes/font_size = 33
Label/fonts/font = ExtResource("2_rb3lx")

[sub_resource type="Theme" id="Theme_06l15"]
RichTextLabel/font_sizes/normal_font_size = 22
RichTextLabel/fonts/normal_font = ExtResource("6_f7xku")

[node name="Node2D" type="Node2D"]
script = ExtResource("1_xs85p")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="TextureRect" type="TextureRect" parent="Control"]
modulate = Color(0.8, 0.8, 0.8, 0.647059)
layout_mode = 0
offset_right = 1152.0
offset_bottom = 658.0
texture = ExtResource("2_v5nnq")

[node name="BobaCount" type="RichTextLabel" parent="Control"]
custom_minimum_size = Vector2(34.35, 36.155)
layout_mode = 2
offset_left = 1.0
offset_top = 59.0
offset_right = 495.0
offset_bottom = 140.0
theme = SubResource("Theme_v5nnq")
bbcode_enabled = true
text = "[center] bobas: 7.777e77"
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
layout_mode = 0
offset_left = 1.0
offset_top = 608.0
offset_right = 173.0
offset_bottom = 648.0

[node name="Mult" type="Button" parent="Control/HBoxContainer"]
layout_mode = 2
text = "Multi amount: 1"
icon_alignment = 1

[node name="MultBack" type="Button" parent="Control/HBoxContainer"]
custom_minimum_size = Vector2(44.01, 0)
layout_mode = 2
size_flags_horizontal = 3
theme = SubResource("Theme_emewn")
text = "back"
icon_alignment = 1

[node name="Auto" type="Button" parent="Control"]
layout_mode = 1
offset_left = 225.0
offset_top = 587.0
offset_right = 390.0
offset_bottom = 645.0
toggle_mode = true
text = "AutoBoom"
icon_alignment = 1

[node name="Timer" type="Timer" parent="Control"]
autostart = true

[node name="TextureButton" type="TextureButton" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -470.0
offset_top = -137.5
offset_right = -168.0
offset_bottom = 171.5
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("4_v5nnq")
stretch_mode = 4

[node name="Panel" type="Panel" parent="Control"]
self_modulate = Color(0.35, 0.14, 0, 1)
top_level = true
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -657.0
offset_top = -306.0
offset_right = -16.0
offset_bottom = 314.0
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_dqflq")

[node name="HBoxContainer" type="HBoxContainer" parent="Control/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.053
anchor_right = 1.0
anchor_bottom = 0.14
offset_left = -11.0
offset_top = -14.86
offset_right = 14.0
offset_bottom = -14.8
scale = Vector2(0.93, 1)
pivot_offset = Vector2(320.77, 26.72)

[node name="Panel" type="Panel" parent="Control/Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_c3alu")

[node name="Production" type="Label" parent="Control/Panel/HBoxContainer/Panel"]
layout_mode = 2
offset_left = 2.15045
offset_top = 8.0
offset_right = 328.15
offset_bottom = 50.0
size_flags_horizontal = 3
theme = SubResource("Theme_7qejb")
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Production"
horizontal_alignment = 1

[node name="Panel2" type="Panel" parent="Control/Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_ah07c")

[node name="Upgrades" type="Label" parent="Control/Panel/HBoxContainer/Panel2"]
layout_mode = 2
offset_left = 8.00006
offset_top = 6.0
offset_right = 319.0
offset_bottom = 48.0
size_flags_horizontal = 3
theme = SubResource("Theme_xro1c")
text = "Upgrades"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Control/Panel"]
layout_mode = 0
offset_left = 22.0
offset_top = 82.0
offset_right = 317.0
offset_bottom = 593.0
horizontal_scroll_mode = 0
vertical_scroll_mode = 4

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Panel/ScrollContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/Panel/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(279.75, 65)
layout_mode = 2
size_flags_vertical = 3

[node name="VietBoyBut" type="TextureButton" parent="Control/Panel/ScrollContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("5_f7xku")

[node name="VietBoyBuy" type="RichTextLabel" parent="Control/Panel/ScrollContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(219.48, 0)
layout_mode = 2
theme = SubResource("Theme_06l15")
text = "Vietnamese Boy: 120
Price: 50
1 bps

"
scroll_active = false
autowrap_mode = 0
vertical_alignment = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/Panel/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(279.75, 65)
layout_mode = 2
size_flags_vertical = 3

[node name="VietManBut" type="TextureButton" parent="Control/Panel/ScrollContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
texture_normal = ExtResource("7_dqflq")

[node name="VietManBuy" type="RichTextLabel" parent="Control/Panel/ScrollContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(219.48, 0)
layout_mode = 2
theme = SubResource("Theme_06l15")
text = "Vietnamese Man: 0
Price: 250
1 bps

"
scroll_active = false
autowrap_mode = 0
vertical_alignment = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="Control/Panel/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(279.75, 65)
layout_mode = 2
size_flags_vertical = 3

[node name="RobotBut" type="TextureButton" parent="Control/Panel/ScrollContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
texture_normal = ExtResource("8_dqflq")

[node name="RobotBuy" type="RichTextLabel" parent="Control/Panel/ScrollContainer/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(219.48, 0)
layout_mode = 2
theme = SubResource("Theme_06l15")
text = "Robot: 0
Price: 1000
19 bps

"
scroll_active = false
autowrap_mode = 0
vertical_alignment = 2

[connection signal="pressed" from="Control/HBoxContainer/Mult" to="." method="_on_mult_pressed"]
[connection signal="pressed" from="Control/HBoxContainer/MultBack" to="." method="_on_mult_back_pressed"]
[connection signal="toggled" from="Control/Auto" to="." method="_on_auto_toggled"]
[connection signal="timeout" from="Control/Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="Control/TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="Control/Panel/ScrollContainer/VBoxContainer/HBoxContainer/VietBoyBut" to="." method="_on_viet_boy_but_pressed"]
[connection signal="pressed" from="Control/Panel/ScrollContainer/VBoxContainer/HBoxContainer2/VietManBut" to="." method="_on_viet_man_but_pressed"]
[connection signal="pressed" from="Control/Panel/ScrollContainer/VBoxContainer/HBoxContainer3/RobotBut" to="." method="_on_robot_but_pressed"]
